# client-prototype

./: CMakeLists.txt  cache_manager.cpp  cache_manager.h  cavokeclientmodel.cpp  cavokeclientview.cpp  cavokeclientview.h  cavokeclientview.ui  cavokeqmlgamemodel.cpp  tictactoelogic.cpp  tictactoelogic.h
tictactoe-files/: tic-tac-toe.qml
tictactoe-files/content/: interactions.js
